# ndc-dynamodb

./: Cargo.toml  Dockerfile  README.md  by_keys.http  changelog.md  config-forum.json  config.json  flake.nix  metadata-forum.hml  metadata.hml  notes.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-and-test.yml  cargo-build.yaml  cargo-test.yaml  check-format.yaml  nix-check.yaml  ship.yaml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  metadata.rs
crates/configuration/: Cargo.toml
crates/configuration/src/: configuration.rs  connection_settings.rs  error.rs  lib.rs  to_runtime_configuration.rs  version1.rs
crates/configuration/src/values/: connection_info.rs  mod.rs  pool_settings.rs
crates/ndc-dynamodb/: Cargo.toml
crates/ndc-dynamodb/src/: capabilities.rs  connector.rs  health.rs  lib.rs  query.rs  schema.rs  state.rs
crates/query-engine/execution/: Cargo.toml
crates/query-engine/execution/src/: query.rs
crates/query-engine/metadata/: Cargo.toml
crates/query-engine/metadata/src/metadata/: database.rs  mod.rs
crates/query-engine/sql/: Cargo.toml
crates/query-engine/sql/src/sql/: ast.rs  convert.rs  execution_plan.rs  helpers.rs  mod.rs
crates/query-engine/sql/src/sql/rewrites/: constant_folding.rs
crates/query-engine/translation/: Cargo.toml
crates/query-engine/translation/src/translation/: error.rs  helpers.rs
crates/query-engine/translation/src/translation/query/: fields.rs  filtering.rs  mod.rs  root.rs  sorting.rs  values.rs
nix/: app.nix
scripts/: release-notes.py
src/: capabilities.ts  configuration-schema.generated.json  configuration.ts  connector.ts  index.ts  query.ts  result.ts  schema-dynamo.ts  schema-ndc.ts  schema.ts  util.ts
static/: configuration.json
test/: schema-ndc.test.ts  util.ts
testing1/: configuration.json
