[package]
name = "ndc-dynamodb"
version.workspace = true
edition.workspace = true

default-run = "ndc-dynamodb"

[lints]
workspace = true

[lib]
name = "ndc_dynamodb"
path = "src/lib.rs"

[[bin]]
name = "ndc-dynamodb"
path = "bin/main.rs"

[dependencies]
ndc-sdk = { workspace = true }
ndc-dynamodb-configuration = { path = "../configuration" }
query-engine-sql = { path = "../query-engine/sql" }
query-engine-translation = { path = "../query-engine/translation" }
query-engine-execution = { path = "../query-engine/execution" }
query-engine-metadata = { path = "../query-engine/metadata" }

anyhow = { workspace = true }
async-trait = { workspace = true }
mimalloc = { workspace = true }
percent-encoding = { workspace = true }
prometheus = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
sqlx = { workspace = true, features = ["json", "postgres", "runtime-tokio-rustls"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
url = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { workspace = true }