[package]
name = "query-engine-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ndc-models = { workspace = true }
smol_str = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true, features = ["smol_str"] }
